# naive_bayes

./: .gitignore  Baseline.hs  GetNews.hs  Gibbs.hs  GibbsOpt.hs  GibbsOpt2.hs  GibbsOptBucket.hs  LICENSE  Main.hs  Makefile  NBHakaru.hs  NaiveBayes.hs  NaiveBayesMain.hs  NaiveBayesSweeps.hs  News.hs  README.md  experiments.sh  gencore.sh  gibbs.c  gibbstimes.csv  naive-bayes.cabal  naive_bayes.R  naive_bayes.jags  naive_bayes.sh  naive_bayes_gibbs.hk  naive_bayes_sweeps.R  nb_simp.c  nb_simp.hk  nbhak.core.mod  nbhakmod.core  nbsweeps.csv  nbsweeps2.csv  nbsweeps3.csv  nbtimes.csv  nbtimes_cleaned.csv  plot.R  plot.py  plot2.R  run.sh  run2.sh  (+4 more)
